data/all_generated_tests/raw_wast_tests/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1316.wast
;; 7.  *Test Description*: Execute a backward branch targeting a loop with mismatched input types in an imported function, verifying the correct operand stack adjustment.     *Constraint Being Checked*: Ensures that backward branches correctly handle operand types of loop inputs across module boundaries and single-module contexts.

(assert_invalid
  (module
    (func $test
      (import "env" "externalLoop" (func $externalLoop (param i32) (result i32)))
      (i32.const 42)
      (loop (param i32) (result i32)
        (br 0 (call $externalLoop (i64.const 1)))
      )
    )
  )
  "type mismatch"
)